# jupyterlab-nix

./: README.md  first.ipynb  flake.nix  hello-world.ipynb  pyproject.toml
