[tool.poetry]
name = "jkr-jupyterlab"
version = "1.0.0"
description = "Jupyter lab environment"
authors = ["Jörg Kütemeier <joerg@kuetemeier.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
jupyterlab = "^4.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
